roles and permissions

--- a/src/Dto/Dto.csproj
+++ b/src/Dto/Dto.csproj
@@ -74,6 +74,9 @@
     <Compile Include="Sales\SalesOrder.cs" />
     <Compile Include="Sales\SalesQuotation.cs" />
     <Compile Include="Sales\SalesReceipt.cs" />
+    <Compile Include="Security\Group.cs" />
+    <Compile Include="Security\Permission.cs" />
+    <Compile Include="Security\Role.cs" />
     <Compile Include="Security\User.cs" />
     <Compile Include="TaxSystem\ItemTaxGroup.cs" />
     <Compile Include="TaxSystem\ItemTaxGroupTax.cs" />
