Done fixing bugs in print invoice (#65)
* Added paymenttermid and reference no to Purchase Invoice and Order

* Added State and No fields

* Added Status field and checking on salesorders.cshtml if its fully invoiced it will disable the create invoice link.

* Modified Status in database and make it null. Modified status in EnumType to be used by their respective classes.

* Change Status in ClassObject nullable

* Added comparing of quantiy on salesorder and salesinvoice

* Modified code on saving salesinvoice for checking of quantity

* testing on fullyinvoice status

* Partial code for checking of salesorderline and salesinvoiceline

* Modified SaveSalesInvoice and add validation on FullyInvoiced Status on salesorder

* disable control for salesinvoice and refactor save

* Partial code on disabling buttons of salesinvoice when not yet posted.

* modified code for salesinvoice form

* Modified purchase invoice for edit rules

* Added logic for posting

* add print button on salesinvoice

* Added jspdf

* Modified template for printing salesinvoice

* Modified code for printing invoices

* modified ui of print invoice

* Modified code for printing invoice

* Modified code for printing invoice

* Modified code for print invoice

* modified code for print invoice

* modified for printing invoice

* Modified code for print invoice

* added checking on print button

* Modified code for print invoice

* Added ModelId checking

--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -24,6 +24,7 @@
     "knockout": "latest",
     "knockout-mapping": "latest",
     "accounting": "^0.4.1",
-    "jspdf": "latest"
+    "jspdf": "latest",
+    "html2canvas": "0.5.0-beta4"
   }
 }
