--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -1,30 +1,30 @@
 {
-  "version": "1.0.0",
+  "version": "0.0.1",
   "name": "accountgoweb",
   "private": true,
   "devDependencies": {
-    "gulp": "latest",
-    "ts-loader": "latest",
-    "tsd": "latest",
-    "typescript": "latest",
-    "mobx-react-devtools": "^4.2.0"
+    "gulp": "3.9.1",
+    "ts-loader": "3.5.0",
+    "tsd": "0.6.5",
+    "typescript": "2.7.1",
+    "mobx-react-devtools": "4.2.15"
   },
   "dependencies": {
-    "axios": "latest",
-    "bootstrap": "latest",
-    "jquery": "2.2.4",
-    "mobx": "latest",
-    "mobx-react": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "d3": "latest",
-    "react-router": "latest",
-    "ag-grid": "latest",
-    "ag-grid-react": "latest",
-    "knockout": "latest",
-    "knockout-mapping": "latest",
-    "accounting": "^0.4.1",
-    "jspdf": "latest",
-    "html2canvas": "0.5.0-beta4"
+    "axios": "0.17.1",
+    "bootstrap": "4.0.0",
+    "jquery": "3.3.1",
+    "mobx": "3.5.1",
+    "mobx-react": "4.4.1",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "d3": "4.13.0",
+    "react-router": "4.2.0",
+    "ag-grid": "16.0.1",
+    "ag-grid-react": "16.0.0",
+    "knockout": "3.5.0-beta",
+    "knockout-mapping": "2.6.0",
+    "accounting": "0.4.1",
+    "jspdf": "1.3.5",
+    "html2canvas": "1.0.0-alpha.9"
   }
 }
