--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -4,14 +4,16 @@
   "private": true,
   "devDependencies": {
     "gulp": "3.9.1",
+    "mobx-react-devtools": "4.2.15",
     "ts-loader": "3.5.0",
     "tsd": "0.6.5",
     "typescript": "2.7.1",
-    "mobx-react-devtools": "4.2.15"
+    "webpack": "^3.11.0"
   },
   "dependencies": {
     "axios": "0.17.1",
     "bootstrap": "4.0.0",
+    "popper.js": "1.12.9",
     "jquery": "3.3.1",
     "mobx": "3.5.1",
     "mobx-react": "4.4.1",
@@ -21,8 +23,9 @@
     "react-router": "4.2.0",
     "ag-grid": "16.0.1",
     "ag-grid-react": "16.0.0",
-    "knockout": "3.5.0-beta",
+    "react-dom-factories": "1.0.2",
     "knockout-mapping": "2.6.0",
+    "knockout": "3.5.0-beta",
     "accounting": "0.4.1",
     "jspdf": "1.3.5",
     "html2canvas": "1.0.0-alpha.9"
