--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -8,7 +8,8 @@
     "ts-loader": "3.5.0",
     "tsd": "0.6.5",
     "typescript": "2.7.1",
-    "webpack": "^3.11.0"
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0"
   },
   "dependencies": {
     "axios": "0.17.1",
