--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -4,31 +4,32 @@
   "private": true,
   "devDependencies": {
     "gulp": "^3.9.1",
-    "mobx-react-devtools": "4.2.15",
-    "ts-loader": "3.5.0",
+    "mobx-react-devtools": "6.0.3",
+    "ts-loader": "5.1.0",
     "tsd": "0.6.5",
-    "typescript": "2.7.1",
+    "typescript": "3.0.3",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {
-    "axios": "0.17.1",
-    "bootstrap": "4.0.0",
-    "popper.js": "1.12.9",
+    "axios": "0.18.0",
+    "bootstrap": "4.1.3",
+    "popper.js": "1.14.4",
     "jquery": "3.3.1",
-    "mobx": "3.5.1",
-    "mobx-react": "4.4.1",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "d3": "4.13.0",
-    "react-router": "4.2.0",
-    "ag-grid": "16.0.1",
-    "ag-grid-react": "16.0.0",
+    "mobx": "5.1.1",
+    "mobx-react": "5.2.8",
+    "react": "16.5.1",
+    "react-dom": "16.5.1",
+    "d3": "5.7.0",
+    "react-router": "4.3.1",
+    "ag-grid": "18.1.2",
+    "ag-grid-community": "^19.0.0",
     "react-dom-factories": "1.0.2",
     "knockout-mapping": "2.6.0",
-    "knockout": "3.5.0-beta",
+    "knockout": "^3.4.2",
     "accounting": "0.4.1",
-    "jspdf": "1.3.5",
-    "html2canvas": "1.0.0-alpha.9"
+    "jspdf": "1.4.1",
+    "html2canvas": "1.0.0-alpha.12",
+    "ajv": "^6.5.3"
   }
 }
