--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,3 +12,6 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- task: gulp@0
+  inputs:
+    gulpFile: ''./src/accountgoweb/gulpfile.js' 
