set working directory in gulp task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,4 @@ steps:
   inputs:
     gulpjs: './node_modules/gulp/bin/gulp.js'
     gulpFile: './gulpfile.js'
+    workingDirectory: './src/AccountGoWeb'
