fixing locating gulpfile in gult task

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,6 @@ steps:
 
 - task: gulp@0
   inputs:
-    gulpjs: './node_modules/gulp/bin/gulp.js'
-    gulpFile: './gulpfile.js'
+    gulpjs: '/node_modules/gulp/bin/gulp.js'
+    gulpFile: 'gulpfile.js'
     workingDirectory: './src/AccountGoWeb'
