fixing gulpfile.js location in pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,5 +20,5 @@ steps:
 - task: gulp@0
   inputs:
     gulpjs: '/node_modules/gulp/bin/gulp.js'
-    gulpFile: '././src/AccountGoWeb/gulpfile.js'
+    gulpFile: './src/AccountGoWeb/gulpfile.js'
     workingDirectory: './src/AccountGoWeb'
