--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     workingDirectory: './src/AccountGoWeb'
     gulpjs: '/node_modules/gulp/bin/gulp.js'
 
-- script: tsc
+- script: ./node_modules/typescript/bin/tsc
     displayName: 'run tsc'
     workingDirectory: './src/AccountGoWeb'
 
