--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
     gulpjs: '/node_modules/gulp/bin/gulp.js'
 
 - task: Bash@3
-  inputs
+  inputs:
     script: ./src/AccountGoWeb/node_modules/typescript/bin/tsc --build './src/AccountGoWeb/tsconfig.json'
     displayName: 'run tsc'
     workingDirectory: './src/AccountGoWeb'
