--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -5,31 +5,31 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "mobx-react-devtools": "6.0.3",
-    "ts-loader": "5.1.0",
+    "ts-loader": "5.2.1",
     "tsd": "0.6.5",
-    "typescript": "3.0.3",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0"
+    "typescript": "3.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "bootstrap": "4.1.3",
-    "popper.js": "1.14.4",
-    "jquery": "3.3.1",
-    "mobx": "5.1.1",
-    "mobx-react": "5.2.8",
-    "react": "16.5.1",
-    "react-dom": "16.5.1",
-    "d3": "5.7.0",
-    "react-router": "4.3.1",
+    "accounting": "0.4.1",
     "ag-grid": "18.1.2",
     "ag-grid-community": "^19.0.0",
-    "react-dom-factories": "1.0.2",
-    "knockout-mapping": "2.6.0",
-    "knockout": "^3.4.2",
-    "accounting": "0.4.1",
-    "jspdf": "1.4.1",
+    "ajv": "^6.5.4",
+    "axios": "0.18.0",
+    "bootstrap": "4.1.3",
+    "d3": "5.7.0",
     "html2canvas": "1.0.0-alpha.12",
-    "ajv": "^6.5.3"
+    "jquery": "3.3.1",
+    "jspdf": "1.4.1",
+    "knockout": "^3.4.2",
+    "knockout-mapping": "2.6.0",
+    "mobx": "5.5.0",
+    "mobx-react": "5.2.8",
+    "popper.js": "1.14.4",
+    "react": "16.5.2",
+    "react-dom": "16.5.2",
+    "react-dom-factories": "1.0.2",
+    "react-router": "4.3.1"
   }
 }
