--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,21 +7,21 @@ services:
             context: .
         ports:
             - "8000:80"
-    #     depends_on:
-    #         - api
-    # api:
-    #     image: accountgo/accountgoapi
-    #     build:
-    #         dockerfile: ./src/Api/Dockerfile
-    #         context: .
-    #     ports:
-    #         - "5000:80"
-    #     depends_on:
-    #         - db
-    # db:
-    #     image: microsoft/mssql-server-linux
-    #     ports:
-    #         - "1433:1433"
-    #     environment:
-    #         SA_PASSWORD: "Str0ngPassword"
-    #         ACCEPT_EULA: "Y"
+        depends_on:
+            - api
+    api:
+        image: accountgo/accountgoapi
+        build:
+            dockerfile: ./src/Api/Dockerfile
+            context: .
+        ports:
+            - "5000:80"
+        depends_on:
+            - db
+    db:
+        image: microsoft/mssql-server-linux
+        ports:
+            - "1433:1433"
+        environment:
+            SA_PASSWORD: "Str0ngPassword"
+            ACCEPT_EULA: "Y"
