--- a/src/AccountGoWeb/appsettings.json
+++ b/src/AccountGoWeb/appsettings.json
@@ -1,4 +1,3 @@
 ﻿{
-  "ApiUrl": "https://accountgoapi.azurewebsites.net/api/"
-  //"ApiUrl": "http://localhost:5000/api/"
+  "ApiUrl": "https://localhost:44301/api/"
 }
