--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,27 @@
 version: "3"
 services:
-    # web:
-    #     image: accountgo/accountgoweb
-    #     build: 
-    #         dockerfile: ./src/AccountGoWeb/Dockerfile
-    #         context: .
-    #     ports:
-    #         - "8000:8000"
-    #     depends_on:
-    #         - api
-    #     environment:
-    #         - ASPNETCORE_ENVIRONMENT=Development
-    #         - ASPNETCORE_URLS=https://+;http://+
-    #         - ASPNETCORE_HTTPS_PORT=44300
+    web:
+        image: accountgo/accountgoweb
+        build: 
+            dockerfile: ./src/AccountGoWeb/Dockerfile
+            context: .
+        ports:
+            - "8000:80"
+        depends_on:
+            - api
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - ASPNETCORE_URLS=http://+
     api:
         image: accountgo/accountgoapi
         build:
             dockerfile: ./src/Api/Dockerfile
             context: .
         ports:
-            - "8001:8001"
-            - "44301:44301"
+            - "8001:80"
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - ASPNETCORE_URLS=http://+
-            - ASPNETCORE_HTTPS_PORT=44301
         depends_on:
             - db
     db:
