ignore gulp and tsc output

--- a/.gitignore
+++ b/.gitignore
@@ -193,6 +193,8 @@ FakesAssemblies/
 **/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/plugins/*
 **/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/[Ll]ibs/*
 **/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/[Ss]cripts/*
+**/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/[Ll]ib/*
+**/src/[Aa]ccount[Gg]o[Ww]eb/wwwroot/tsxbuild/*
 # node modules
 **/src/[Ww]eb[Aa]ngular/node_modules
 **/src/[Ww]eb[Aa]pp/wwwroot/node_modules/*
