--- a/src/AccountGoWeb/package.json
+++ b/src/AccountGoWeb/package.json
@@ -28,6 +28,7 @@
     "d3": "5.7.0",
     "font-awesome": "^4.7.0",
     "html2canvas": "1.0.0-alpha.12",
+    "ionicons": "^4.4.4",
     "jquery": "3.3.1",
     "jspdf": "1.4.1",
     "knockout": "^3.4.2",
