add webpack command on dotnet buid/run

--- a/src/AccountGoWeb/AccountGoWeb.csproj
+++ b/src/AccountGoWeb/AccountGoWeb.csproj
@@ -43,4 +43,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Dto\Dto.csproj" />
   </ItemGroup>
+
+  <Target Name="NpmCommands" AfterTargets="Build">
+        <Exec Command="webpack" />
+  </Target>
+
 </Project>
