add gulp command on dotnet build

--- a/src/AccountGoWeb/AccountGoWeb.csproj
+++ b/src/AccountGoWeb/AccountGoWeb.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
 
   <Target Name="NpmCommands" AfterTargets="Build">
+        <Exec Command="gulp" />
         <Exec Command="webpack" />
   </Target>
 
