--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,11 +17,11 @@ steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
 
-- task: gulp@0
-  inputs:
-    gulpFile: './src/AccountGoWeb/gulpfile.js'
-    workingDirectory: './src/AccountGoWeb'
-    gulpjs: '/node_modules/gulp/bin/gulp.js'
+# - task: gulp@0
+#   inputs:
+#     gulpFile: './src/AccountGoWeb/gulpfile.js'
+#     workingDirectory: './src/AccountGoWeb'
+#     gulpjs: '/node_modules/gulp/bin/gulp.js'
 
 # - task: Bash@3
 #   inputs:
