--- a/src/AccountGoWeb/Dockerfile
+++ b/src/AccountGoWeb/Dockerfile
@@ -4,8 +4,6 @@ WORKDIR /app
 COPY ./src/Dto Dto
 COPY ./src/AccountGoWeb AccountGoWeb
 
-RUN dotnet build ./AccountGoWeb/*.csproj
-
 ENV APIHOST api
 ENV NODE_VERSION 10.11.0
 ENV NODE_DOWNLOAD_SHA 4d8aaf8c1c51acbbb46bbd4e3c924a573884603b1c4e35cc02982bbda9779c8b
@@ -18,11 +16,7 @@ RUN curl -SL "https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-lin
 WORKDIR /app/AccountGoWeb
 
 RUN npm install
-RUN npm install -g typescript webpack webpack-cli gulp
-
-RUN gulp
-RUN tsc
-RUN APIHOST=${APIHOST} webpack
+RUN npm run css
 
 RUN dotnet publish AccountGoWeb.csproj -c Release -o out
 
@@ -30,7 +24,6 @@ FROM microsoft/dotnet:2.1.1-aspnetcore-runtime-alpine3.7
 # This APIHOST environment variable is not a duplicate of above declaration
 ENV APIHOST api
 WORKDIR /app
-
 EXPOSE 8000
 
 COPY --from=build-env /app/AccountGoWeb/out ./
