--- a/src/Api/Properties/launchSettings.json
+++ b/src/Api/Properties/launchSettings.json
@@ -19,7 +19,10 @@
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DBSERVER": "localhost",
+        "DBUSERID": "sa",
+        "DBPASSWORD": "Str0ngPassword"
       },
       "applicationUrl": "http://localhost:8001/"
     }
