add Directory.Build props and targets

--- a/test/Module.Tests/Module.Tests.csproj
+++ b/test/Module.Tests/Module.Tests.csproj
@@ -15,4 +15,5 @@
     <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
+  <Import Project="SampleModulesRefs.targets" />
 </Project>
