fix error in sample module

--- a/src/AccountGoWeb/AccountGoWeb.csproj
+++ b/src/AccountGoWeb/AccountGoWeb.csproj
@@ -47,8 +47,8 @@
   </ItemGroup>
 
   <Target Name="NpmCommands" AfterTargets="Build">
-    <!-- <Exec Command="npm run gulp" />
-    <Exec Command="npm run webpack" /> -->
+    <Exec Command="npm run gulp" />
+    <Exec Command="npm run webpack" />
   </Target>
 
   <Target Name="BuildModules" AfterTargets="Build">
